--- a/drivers/gpu/drm/xen/Kconfig
+++ b/drivers/gpu/drm/xen/Kconfig
@@ -27,6 +27,9 @@ config DRM_XEN_FRONTEND_CMA
 	select DRM_GEM_CMA_HELPER
 	help
 	  Use DRM CMA helpers to allocate dumb buffers.
+	  This is useful for the use-cases when guest driver needs to
+	  share or export buffers to other drivers which only expect
+	  contiguous buffers.
 	  Note: in this mode driver cannot use buffers allocated
 	  by the backend.
 
